--- a/main.ipynb
+++ b/main.ipynb
@@ -15,8 +15,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Author : Amogh Pradeep\n",
-    "Email : amogh.pradeep049@nmims.edu"
+    "Author : Amogh Pradeep<br>Email : amogh.pradeep049@nmims.edu"
    ],
    "metadata": {
     "collapsed": false
@@ -636,7 +635,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Data description says that with these columns \"na\" actually means that the given feature is not present in the house.\n",
+    "<hr> Step 1 : Data description says that with these columns \"na\" actually means that the given feature is not present in the house. <br>\n",
     "This means that the data is not missing, the feature is."
    ],
    "metadata": {
@@ -665,7 +664,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Dealing with all garage features."
+    "Step 2 : Dealing with all garage features."
    ],
    "metadata": {
     "collapsed": false
@@ -692,7 +691,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Dealing with all basement features."
+    "Step 3 : Dealing with all basement features."
    ],
    "metadata": {
     "collapsed": false
@@ -734,27 +733,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Replacing discrete values with median.\n",
-    "**Note** : By replacing with median of the entire dataset (test + train), data leakage occurs. But that is ultimately better for accuracy in competition."
+    "Step 4 : Replacing discrete values with median.<br> **Note** : By replacing with median of the entire dataset (test + train), data leakage occurs. But that is ultimately better for accuracy in competition."
    ],
    "metadata": {
     "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [],
-   "source": [
-    "# Lot frontage - we can't simply remove this discrete column as it has a high correlation with\n",
-    "# SalePrice (0.4)\n",
-    "df[\"LotFrontage\"] = df[\"LotFrontage\"].fillna(df[\"LotFrontage\"].median())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
    }
   },
   {
@@ -909,8 +891,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "These are actually categorical classes but disguised as discrete numbers.\n",
-    "Let's first convert them into categorical values, and then use LabelEncoder on them to prevent an inconsistencies."
+    "These are actually categorical classes but disguised as discrete numbers.<br> Let's first convert them into categorical values, and then use LabelEncoder on them to prevent an inconsistencies."
    ],
    "metadata": {
     "collapsed": false
@@ -1180,8 +1161,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Pre-defined functions for calculating metrics easily.\n",
-    "Ignore below code cell."
+    "Pre-defined functions for calculating metrics easily. <br>Ignore below code cell."
    ],
    "metadata": {
     "collapsed": false
