--- a/main.ipynb
+++ b/main.ipynb
@@ -2781,7 +2781,7 @@
     "collapsed": false
    },
    "source": [
-    "## Results\n",
+    "# VIII. Results\n",
     "<hr>"
    ]
   },
@@ -2831,10 +2831,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Exporting Predictions"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 330,
    "outputs": [],
-   "source": [],
+   "source": [
+    "xgb_reg = xgb.XGBRegressor(random_state = 0)\n",
+    "gboost_reg = GradientBoostingRegressor(random_state = 0)\n",
+    "rfr_reg = RandomForestRegressor(n_estimators=1000, random_state=0)\n",
+    "lgb_reg = lgb.LGBMRegressor(random_state = 0)\n",
+    "\n",
+    "bagged_model = AveragingModels(models = (rfr_reg, xgb_reg, gboost_reg, lgb_reg))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AveragingModels(models=(RandomForestRegressor(n_estimators=1000,\n                                              random_state=0),\n                        XGBRegressor(base_score=None, booster=None,\n                                     colsample_bylevel=None,\n                                     colsample_bynode=None,\n                                     colsample_bytree=None,\n                                     enable_categorical=False, gamma=None,\n                                     gpu_id=None, importance_type=None,\n                                     interaction_constraints=None,\n                                     learning_rate=None, max_delta_step=None,\n                                     max_depth=None, min_child_weight=None,\n                                     missing=nan, monotone_constraints=None,\n                                     n_estimators=100, n_jobs=None,\n                                     num_parallel_tree=None, predictor=None,\n                                     random_state=0, reg_alpha=None,\n                                     reg_lambda=None, scale_pos_weight=None,\n                                     subsample=None, tree_method=None,\n                                     validate_parameters=None, verbosity=None),\n                        GradientBoostingRegressor(random_state=0),\n                        LGBMRegressor(random_state=0)))"
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bagged_model.fit(train, y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "outputs": [],
+   "source": [
+    "test_prediction = bagged_model.predict(test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "outputs": [],
+   "source": [
+    "solution = pd.concat([ids, pd.Series(test_prediction)], axis=1, ignore_index=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "outputs": [],
+   "source": [
+    "solution.columns = [\"Id\", \"SalePrice\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "outputs": [],
+   "source": [
+    "solution.to_csv(\"solution.csv\", index=False)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
